Fix FindBugs issues
git-svn-id: https://svn.apache.org/repos/asf/turbine/fulcrum/trunk@1773047 13f79535-47bb-0310-9956-ffa450edef68